# log-analysis

./: .gitignore  .gitleaks.toml  LICENSE  README.md  SECURITY.md  codecov.yml  hatch_build.py  pyproject.toml
.ai/agent/: orangit_e2e_tester.yaml  orangit_tester.yaml  orangit_updater.yaml  orangit_upgrader.yaml  orangit_visual_tester.yaml  orangit_visual_workflow.yaml  orangit_workflow.yaml
.ai/orangit_agents/: build.py
.claude/agents/: orangit_e2e_tester.md  orangit_tester.md  orangit_updater.md  orangit_upgrader.md  orangit_visual_tester.md  orangit_visual_workflow.md  orangit_workflow.md
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/actions/: README.md
.github/actions/gitleaks-scan/: action.yml
.github/rulesets/: main.json
.github/workflows/: ci.yml  daily.yml  publish-to-confluence.yml
.opencode/agent/: orangit_e2e_tester.md  orangit_tester.md  orangit_updater.md  orangit_upgrader.md  orangit_visual_tester.md  orangit_visual_workflow.md  orangit_workflow.md
docs/: ai_agents.md
docs/plan/: logscope-specs.md
scripts/: bootstrap-agents.sh  gen_meta.py  update-agents.sh
src/logscope/: __init__.py  analyze.py  cli.py  completions.py  config.py  context.py  input.py  local_commands.py  prompt.py  redact.py  translate.py  update.py
tests/: __init__.py  test_analyze.py  test_cli.py  test_completions.py  test_config.py  test_context.py  test_input.py  test_local_commands.py  test_prompt.py  test_redact.py  test_translate.py  test_update.py
(+5 files in other folders)
